name:               saeplog
version:            0.0.1
synopsis:           Personal blogging software
-- description:
license:            BSD3
license-file:       LICENSE
author:             Sebastian Witte
maintainer:         woozletoff@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

executable saeplog
  main-is:              Main.hs
  hs-source-dirs:       executable
  other-modules:        Example
  build-depends:        base,
                        blaze-html,
                        boomerang,
                        directory,
                        filepath,
                        ixset,
                        transformers,
                        happstack-server,
                        lens,
                        mtl,
                        saeplog,
                        text,
                        time,
                        optparse-applicative,
                        web-routes,
                        web-routes-boomerang,
                        web-routes-happstack,
                        web-routes-th

  hs-source-dirs:       executable
  default-language:     Haskell2010
  ghc-options:          -threaded -O

library
  hs-source-dirs:       library
  ghc-options:          -threaded -O
  default-language:     Haskell2010

  build-depends:        base,
                        boomerang,
                        acid-state,
                        blaze-html >=0.7.0.2,
                        containers,
                        data-default,
                        directory,
                        exceptions,
                        filepath,
                        filestore >=0.6.0.3,
                        happstack-server ==7.*,
                        ixset,
                        mtl,
                        lens,
                        old-locale,
                        pandoc >=1.12.3.3,
                        parsec >=3,
                        safecopy,
                        text,
                        time,
                        transformers,
                        transformers-compat,
                        web-routes,
                        web-routes-boomerang,
                        web-routes-happstack,
                        web-routes-th

  exposed-modules:      Web.Saeplog.Templates.Saep,
                        Web.Saeplog.Blog,
                        Web.Saeplog.Converter,
                        Web.Saeplog.Crawler,
                        Web.Saeplog.Server,
                        Web.Saeplog.Types

  other-modules:        Web.Saeplog.Crawler.Repository,
                        Web.Saeplog.Crawler.MetaParser,
                        Web.Saeplog.Crawler.MetaCombiner,
                        Web.Saeplog.State,
                        Web.Saeplog.Types.Entry,
                        Web.Saeplog.Types.FileType

test-suite hspec
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test-suite, library
  main-is:              Spec.hs
  default-language:     Haskell2010
  build-depends:        base,
                        saeplog,

                        hspec ==1.*,
                        QuickCheck >=2.6,

                        blaze-html,
                        containers,
                        data-default,
                        filepath,
                        directory,
                        filestore,
                        ixset,
                        lens,
                        mtl,
                        parsec >=3,
                        text,
                        time,
                        transformers,
                        transformers-compat

  cpp-options:          -DHTEST
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
