name:               saeplog
version:            0.0.1
synopsis:           Personal blogging software
-- description:
license:            BSD3
license-file:       LICENSE
author:             Sebastian Witte
maintainer:         woozletoff@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

executable saeplog
  main-is:              Main.hs
  hs-source-dirs:       executable
  build-depends:        base,
                        saeplog

  hs-source-dirs:       executable
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

library
  hs-source-dirs:       library
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

  build-depends:        base,
                        blaze-html >=0.7.0.2,
                        containers,
                        data-default,
                        directory,
                        dyre,
                        filepath,
                        filestore >=0.6.0.3,
                        happstack-server >=7,
                        ixset,
                        mtl,
                        lens,
                        old-locale,
                        pandoc >=1.12.3.3,
                        parsec >=3,
                        stm,
                        text,
                        time,
                        transformers,
                        transformers-compat

  exposed-modules:      Web.Saeplog,
                        Web.Saeplog.Templates.Default,
                        Web.Saeplog.Blog,
                        Web.Saeplog.Config,
                        Web.Saeplog.Converter,
                        Web.Saeplog.Crawler,
                        Web.Saeplog.Types

  other-modules:        Web.Saeplog.Crawler.Repository,
                        Web.Saeplog.Blog.Query,
                        Web.Saeplog.Crawler.MetaParser,
                        Web.Saeplog.Crawler.MetaCombiner,
                        Web.Saeplog.Main,
                        Web.Saeplog.Types.Blog,
                        Web.Saeplog.Types.CachedEntry,
                        Web.Saeplog.Types.Entry,
                        Web.Saeplog.Types.FileType,
                        Web.Saeplog.Util

test-suite hspec
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test-suite, library
  main-is:              Spec.hs
  default-language:     Haskell2010
  build-depends:        base,
                        saeplog,

                        hspec ==1.*,
                        QuickCheck >=2.6,

                        blaze-html,
                        containers,
                        filepath,
                        directory,
                        filestore,
                        ixset,
                        lens,
                        mtl,
                        old-locale,
                        parsec >=3,
                        stm,
                        text,
                        time,
                        transformers

  cpp-options:          -DHTEST
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
